--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
                         <div class="image-container">
                             <img src="img/mobile-marketing.png" alt="Mobile Application Design">
                             <div class="overlay">
-                                <a href="https://example.com/mobile-app-design" class="arrow-circle">
+                                <a href="brand.html" class="arrow-circle">
                                     <div class="diagonal-arrow"></div>
                                 </a>
                             </div>
@@ -75,7 +75,7 @@
                         <div class="image-container">
                             <img src="img/website.jpg" alt="Website Design">
                             <div class="overlay">
-                                <a href="https://example.com/website-design" class="arrow-circle">
+                                <a href="brand.html" class="arrow-circle">
                                     <div class="diagonal-arrow"></div>
                                 </a>
                             </div>
@@ -91,7 +91,7 @@
                         <div class="image-container">
                             <img src="img/mobile-marketing.png" alt="Game UI Design">
                             <div class="overlay">
-                                <a href="https://example.com/game-ui-design" class="arrow-circle">
+                                <a href="brand.html" class="arrow-circle">
                                     <div class="diagonal-arrow"></div>
                                 </a>
                             </div>
@@ -107,7 +107,7 @@
                         <div class="image-container">
                             <img src="img/brand identity.jpg" alt="Brand Identity">
                             <div class="overlay">
-                                <a href="https://example.com/brand-identity" class="arrow-circle">
+                                <a href="brand.html" class="arrow-circle">
                                     <div class="diagonal-arrow"></div>
                                 </a>
                             </div>
@@ -123,7 +123,7 @@
                         <div class="image-container">
                             <img src="img/mobile-marketing.png" alt="Digital Marketing Campaign">
                             <div class="overlay">
-                                <a href="https://example.com/digital-marketing-campaign" class="arrow-circle">
+                                <a href="brand.html" class="arrow-circle">
                                     <div class="diagonal-arrow"></div>
                                 </a>
                             </div>
@@ -139,7 +139,7 @@
                         <div class="image-container">
                             <img src="img/motion.png" alt="Social Media Strategy">
                             <div class="overlay">
-                                <a href="https://example.com/social-media-strategy" class="arrow-circle">
+                                <a href="brand.html" class="arrow-circle">
                                     <div class="diagonal-arrow"></div>
                                 </a>
                             </div>
