--- a/service.html
+++ b/service.html
@@ -195,7 +195,7 @@
     <footer>
         <div class="footer-content">
             <p class="copyright">
-                All Rights Reserved. 2024 <span class="brand">&copy; BentaMax</span>
+                All Rights Reserved. 2024 <span class="brand">&copy; BetaMax</span>
             </p>
             <div class="to-top" onclick="scrollToTop()">
                 <div class="circle">
