--- a/about.html
+++ b/about.html
@@ -95,27 +95,33 @@
         <!-- Experience Container -->
         <div class="experience-container shadow p-4">
             <h2 class="heading">Experience</h2>
-            <div class="row-item d-flex align-items-start">
-                <div class="timeline">
-                    <span class="circle"></span>
+            <div class="row-item">
+                <div class="timeline-container">
+                    <div class="timeline">
+                        <i class="fa-brands fa-instalod"></i>
+                    </div>
                 </div>
                 <div>
                     <p><strong>2021 - Present</strong> <br> Web Designer <br> Themeforest Market</p>
                 </div>
             </div>
             <hr class="row-divider">
-            <div class="row-item d-flex align-items-start">
-                <div class="timeline">
-                    <span class="circle"></span>
+            <div class="row-item">
+                <div class="timeline-container">
+                    <div class="timeline">
+                        <i class="fa-brands fa-instalod"></i>
+                    </div>
                 </div>
                 <div>
                     <p><strong>2021 - 2023</strong> <br> Marketing Expert GRP <br> Envato Theme Developer</p>
                 </div>
             </div>
             <hr class="row-divider">
-            <div class="row-item d-flex align-items-start">
-                <div class="timeline">
-                    <span class="circle"></span>
+            <div class="row-item">
+                <div class="timeline-container">
+                    <div class="timeline">
+                        <i class="fa-brands fa-instalod"></i>
+                    </div>
                 </div>
                 <div>
                     <p><strong>2021 - 2022</strong> <br> Web Designer <br> Web Developer & Business Partner</p>
@@ -126,27 +132,33 @@
         <!-- Education Container -->
         <div class="education-container shadow p-4">
             <h2 class="heading">Education</h2>
-            <div class="row-item d-flex align-items-start">
-                <div class="timeline">
-                    <span class="circle"></span>
+            <div class="row-item">
+                <div class="timeline-container">
+                    <div class="timeline">
+                        <i class="fa-brands fa-instalod"></i>
+                    </div>
                 </div>
                 <div>
                     <p><strong>2013 - 2015</strong> <br> Bachelor Degree of Information Technology <br> State University Bangladesh</p>
                 </div>
             </div>
             <hr class="row-divider">
-            <div class="row-item d-flex align-items-start">
-                <div class="timeline">
-                    <span class="circle"></span>
+            <div class="row-item">
+                <div class="timeline-container">
+                    <div class="timeline">
+                        <i class="fa-brands fa-instalod"></i>
+                    </div>
                 </div>
                 <div>
                     <p><strong>2021 - 2024</strong> <br> Higher Secondary Education <br> Premium College United VC</p>
                 </div>
             </div>
             <hr class="row-divider">
-            <div class="row-item d-flex align-items-start">
-                <div class="timeline">
-                    <span class="circle"></span>
+            <div class="row-item">
+                <div class="timeline-container">
+                    <div class="timeline">
+                        <i class="fa-brands fa-instalod"></i>
+                    </div>
                 </div>
                 <div>
                     <p><strong>2020 - 2021</strong> <br> UI/UX Design <br> Webster College</p>
