--- a/work.html
+++ b/work.html
@@ -166,10 +166,11 @@
             </div>
         </div>
     </section>
-    <div id="lightbox" class="lightbox"></div>
+    <div id="lightbox" class="lightbox">
         <span class="close">&times;</span>
         <img class="lightbox-content" id="lightbox-img">
     </div>
+    
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
