--- a/about.html
+++ b/about.html
@@ -57,10 +57,10 @@
     <div class="hero-section">
     <div class="content text-left">
       <h1 class="reveal-text">Here I'm Marzana Tithi</h1>
-      <p class="lead">Obviously I'm a Web Designer. Web Developer with over 3 years of experience. Experienced with all stages of the development.</p>
+      <p class="lead">Obviously I'm a Web Designer. Web Developer with over 2 years of experience. Experienced with all stages of the development.</p>
       <div class="btn-container">
         <div class="hire">
-          <a href="#">Hire Me</a>
+          <a href="contact.html">Hire Me</a>
         </div>
         <div class="download-btn">
           <a href="#"><i class="fas fa-download"></i> Download CV</a>
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="image-placeholder">
-      <img src="img/pp.jpg" alt="Marzana Tithi">
+      <img src="img/me.jpg" alt="Marzana Tithi">
     </div>
 </div>
 
@@ -78,12 +78,12 @@
     <div class="container">
         <div class="personal-details">
             <h2>Personal Details</h2>
-            <p>Email: queue@gmail.com</p>
+            <p>Email: ridibaraya@gmail.com</p>
             <p>Languages: English</p>
-            <p>Nationality: Australian</p>
+            <p>Nationality: Bangladeshi</p>
         </div>
         <h1 class="main-heading">I am <span id="animatedText">Frontend developer</span></h1>
-        <p class="subheading">Obviously I'm a Web Designer, Web Developer with over 3 years of experience. Experienced with all stages of the development cycle for dynamic web projects. As opposed to using 'Content here, content here', making it look like readable English.</p>
+        <p class="subheading">Obviously I'm a Web Designer, Web Developer with over 2 years of experience. Experienced with all stages of the development cycle for dynamic web projects. As opposed to using 'Content here, content here', making it look like readable English.</p>
         <div class="signature">Marzana Tithi</div>
     </div>
   </section>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div>
-                    <p><strong>2021 - Present</strong> <br> Web Designer <br> Themeforest Market</p>
+                    <p><strong>2023 - Present</strong> <br> Web Designer <br> Themeforest Market</p>
                 </div>
             </div>
             <hr class="row-divider">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div>
-                    <p><strong>2021 - 2023</strong> <br> Marketing Expert GRP <br> Envato Theme Developer</p>
+                    <p><strong>2022 - 2023</strong> <br> Freelancer at Graphic design <br> Fiverr</p>
                 </div>
             </div>
             <hr class="row-divider">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div>
-                    <p><strong>2021 - 2022</strong> <br> Web Designer <br> Web Developer & Business Partner</p>
+                    <p><strong>2023 - 2024</strong> <br> Web Designer <br> Web Developer & Business Partner</p>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div>
-                    <p><strong>2013 - 2015</strong> <br> Bachelor Degree of Information Technology <br> State University Bangladesh</p>
+                    <p><strong>2013 - 2015</strong> <br> Bachelor Degree of CSE <br> Daffodil International University</p>
                 </div>
             </div>
             <hr class="row-divider">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div>
-                    <p><strong>2021 - 2024</strong> <br> Higher Secondary Education <br> Premium College United VC</p>
+                    <p><strong>2016 - 2017</strong> <br> Higher Secondary Education <br> Khulna Govt. Girls' College</p>
                 </div>
             </div>
             <hr class="row-divider">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div>
-                    <p><strong>2020 - 2021</strong> <br> UI/UX Design <br> Webster College</p>
+                    <p><strong>2014 - 2015</strong> <br> Secondary Education <br> Khulna Govt. Girls' High School</p>
                 </div>
             </div>
         </div>
@@ -173,7 +173,7 @@
 <section class="skills-section">
     <div class="container-skill">
         <h2 class="heading-skill">My Skills</h2>
-        <p class="subtext-skill">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Nunc aliquet ligula nec leo elementum semper.</p>
+        <p class="subtext-skill"> with strong skills in UI/UX design, 3D modeling, and graphic design. Adept at creating visually appealing and user-friendly digital experiences. Adept at creating visually appealing and user-friendly digital experiences.</p>
         <div class="skills-container">
             <div class="skill" data-percentage="100">
                 <div class="circles"></div>
@@ -206,7 +206,7 @@
                 Newsletter
                 <span class="heading-design"></span>
             </h2>
-            <p class="subtext-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquet ligula nec leo elementum semper. Mauris aliquet egestas metus, id pellentesque mauris tincidunt.</p>
+            <p class="subtext-news">Enter your email address to subscribe to this blog and receive notifications of new posts by email everyday.</p>
         </div>
         <div class="form-container">
             <input type="text" placeholder="Name" class="input-field">
