--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,10 @@
               <i class="fas fa-map-marker-alt"></i> Our Office: Gulshan, Dhaka, Bangladesh
           </button>
           <button class="info-item">
-              <i class="fas fa-phone-alt"></i> Contact Number: +8801318283468
+              <i class="fas fa-phone-alt"></i> Contact Number: +8801945041193
           </button>
           <button class="info-item">
-              <i class="fas fa-envelope"></i> Email us: testemail@example.com
+              <i class="fas fa-envelope"></i> Email us: ridibaraya@gmail.com
           </button>
       </div>
 
@@ -98,10 +98,9 @@
 
     <!--social bar-->
     <div class="icon-bar">
-      <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-      <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-      <a href="#" class="google"><i class="fa fa-google"></i></a>
-      <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=100092694412030" class="facebook"><i class="fa fa-facebook"></i></a>
+      <a href="https://mail.google.com/mail/u/0/" class="google"><i class="fa fa-google"></i></a>
+      <a href="https://www.linkedin.com/in/marzana-rahman-0663b3243/" class="linkedin"><i class="fa fa-linkedin"></i></a>
     </div>
     <!--social bar-->
 
