--- a/home.html
+++ b/home.html
@@ -56,14 +56,14 @@
         <div class="hero-container">
             <div class="hero-left">
                 <div class="hexagon">
-                    <img src="img/pp.jpg" alt="Bentos Walker" class="profile-image">
+                    <img src="img/me1.jpg" alt="Marzana Rahman" class="profile-image">
                 </div>
                 <h1 class="ben">Marzana Rahman</h1>
-                <p>I am a Web Designer based in san francisco.</p>
+                <p>I am a Web Designer and Developer.</p>
                 <div class="social-icons">
-                    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100092694412030" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://github.com/Tithi198" class="social-icon"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/marzana-rahman-0663b3243/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="hero-right">
