home contact me

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
                 <h2>Hello there</h2>
                 <h3 class="bento-short">I'm Marzana Rahman, a product designer crafting user-centric design with pixel-perfect precision.</h3>
                 <p class="availability">Available for freelancing</p>
-                <button class="contact-btn">Contact me</button>
+                <a href="contact.html"><button class="contact-btn">Contact me</button></a>
             </div>
         </div>
     </section>
