--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,7 @@
     <div class="icon-bar">
       <a href="https://www.facebook.com/profile.php?id=100092694412030" class="facebook"><i class="fa fa-facebook"></i></a>
       <a href="https://mail.google.com/mail/u/0/" class="google"><i class="fa fa-google"></i></a>
+      <a href="https://github.com/Tithi198" class="github"><i class="fa fa-github"></i></a>
       <a href="https://www.linkedin.com/in/marzana-rahman-0663b3243/" class="linkedin"><i class="fa fa-linkedin"></i></a>
     </div>
     <!--social bar-->
