--- a/service.html
+++ b/service.html
@@ -33,7 +33,7 @@
         </div>
         <nav class="nav-menu">
             <ul id="nav-list">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="service.html">Service</a></li>
                 <li><a href="work.html">Works</a></li>
